--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
               <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
             </section>
           {% endif %}
+		</header>
+		<header>
 		  <ul>
 			<li><a class="active" href="#home">Home</a></li>
 			<li><a href="#news">News</a></li>
