--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,10 @@
 		</header>
 		<header>
 		  <ul>
-			<li><a class="active" href="#home">Home</a></li>
-			<li><a href="#news">News</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a href="#about">About</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="SDKs.html">SDKs</a></li>
+			<li><a href="#notdone">PDK &amp; PDT</a></li>
+			<li><a href="#notdone">Dependencies &amp; Tools</a></li>
 		  </ul>
         </header>
     </div>
