seperate in different files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
             </section>
           {% endif %}
 		</header>
-		<header>
+		<header  class="inner">
 		  <ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="SDKs.html">SDKs</a></li>
-			<li><a href="#notdone">PDK &amp; PDT</a></li>
+			<li><a href="PDK&PDT.html">PDK &amp; PDT</a></li>
 			<li><a href="#notdone">Dependencies &amp; Tools</a></li>
 		  </ul>
         </header>
