--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             </section>
           {% endif %}
 		</header>
-		<header  class="inner">
+		<header>
 		  <ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="SDKs.html">SDKs</a></li>
