--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 			<li><a href="SDKs.html">SDKs</a></li>
 			<li><a href="PDK&PDT.html">PDK &amp; PDT</a></li>
 			<li><a href="SDKs-Docs.html">SDK &amp; PDK Libraries</a></li>
-			<li><a href="#notdone">Dependencies &amp; Tools</a></li>
+			<!--<li><a href="#notdone">Dependencies &amp; Tools</a></li>-->
 		  </ul>
         </header>
     </div>
