--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 			<li><a href="SDKs-Plugins.html">SDKs Plugins</a></li>
 			<li><a href="PDK&PDT.html">PDK &amp; PDT</a></li>
 			<li><a href="SDKs-Docs.html">SDK &amp; PDK Libraries</a></li>
-			<!--<li><a href="#notdone">Dependencies &amp; Tools</a></li>-->
+			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
 			<li><a href="Themes.html">Theme Making</a></li>
 		  </ul>
         </header>
