add Documentation to menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
 			<li><a href="SDKs-Docs.html">SDK &amp; PDK Libraries</a></li>
 			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
 			<li><a href="Themes.html">Theme Making</a></li>
+			<li><a href="Documentation.html">Documentation</a></li>
 		  </ul>
         </header>
     </div>
