add Modding tools to navigation bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
 			<li><a href="Themes.html">Theme Making</a></li>
 			<li><a href="Documentation.html">Documentation</a></li>
+			<li><a href="Tools.html">Modding Tools</a></li>
 		  </ul>
         </header>
     </div>
