--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -48,7 +48,7 @@ body {
   color:#373737;
   background: #212121;
   font-size: 16px;
-  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  font-family: sans-serif, 'Myriad Pro', Calibri, Helvetica, Arial;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
+  font-family: sans-serif, 'Lucida Grande', 'Calibri', Helvetica, Arial;
   letter-spacing: -1px;
 }
 
