--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -436,16 +436,16 @@ header ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-	text-align: center;
+   	text-align: center;
     /*background-color: #333;*/
 }
 
 header li {
-    display: inline;
     /*float: left;*/
+    display: inline;
 }
 
-header li a {
+header li a, .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
@@ -453,8 +453,35 @@ header li a {
     text-decoration: none;
 }
 
-header li a:hover {
-    background-color: #111;
+header li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+
+header li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 #tocs ul {
