--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -454,7 +454,7 @@ header li a, .dropbtn {
 }
 
 header li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #111;
 }
 
 header li.dropdown {
