try adding dropdown menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,14 @@
 			<li><a href="Themes.html">Theme Making</a></li>
 			<li><a href="Documentation.html">Documentation</a></li>
 			<li><a href="Tools.html">Modding Tools</a></li>
+			<li class="dropdown">
+				<a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+				<div class="dropdown-content">
+				  <a href="#">Linkasdadsadasdasdasda 1</a>
+				  <a href="#">Link 2</a>
+				  <a href="#">Link 3</a>
+				</div>
+            </li>
 		  </ul>
         </header>
     </div>
