Trying out seperation of SDKs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,11 +41,14 @@
 			<li><a href="Documentation.html">Documentation</a></li>
 			<li><a href="Tools.html">Modding Tools</a></li>
 			<li class="dropdown">
-				<a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+				<a href="javascript:void(0)" class="dropbtn">WIP</a>
 				<div class="dropdown-content">
-				  <a href="#">Linkasdadsadasdasdasda 1</a>
-				  <a href="#">Link 2</a>
-				  <a href="#">Link 3</a>
+				  <a href="#">Developer Platform Tools</a>
+				  <a href="#">S60, S80, S90 SDKs</a>
+				  <a href="#">UIQ, Symbian^3 SDKs</a>
+				  <a href="#">Phone-specific SDKs</a>
+				  <a href="#">QT, Python, Ruby, SilverLight SDKs</a>
+				  <a href="#">Various SDKs</a>
 				</div>
             </li>
 		  </ul>
