try seperating SDKs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,12 +43,12 @@
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">WIP</a>
 				<div class="dropdown-content">
-				  <a href="#">Developer Platform Tools</a>
-				  <a href="#">S60, S80, S90 SDKs</a>
-				  <a href="#">UIQ, Symbian^3 SDKs</a>
-				  <a href="#">Phone-specific SDKs</a>
-				  <a href="#">QT, Python, Ruby, SilverLight SDKs</a>
-				  <a href="#">Various SDKs</a>
+				  <a href="SDKs-DevPlat.html">Developer Platform Tools</a>
+				  <a href="SDKs-Series.html">S60, S80, S90 SDKs</a>
+				  <a href="SDKs-UIQ&S3.html">UIQ, Symbian^3 SDKs</a>
+				  <a href="SDKs-Phone.html">Phone-specific SDKs</a>
+				  <a href="SDKs-Langs.html">QT, Python, Ruby, SilverLight SDKs</a>
+				  <a href="SDKs-Various.html">Various SDKs</a>
 				</div>
             </li>
 		  </ul>
