set seperate sdk pages as default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,16 +32,8 @@
 		<header>
 		  <ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="SDKs.html">SDKs</a></li>
-			<li><a href="SDKs-Plugins.html">SDKs Plugins</a></li>
-			<li><a href="PDK&PDT.html">PDK &amp; PDT</a></li>
-			<li><a href="SDKs-Docs.html">SDK &amp; PDK Libraries</a></li>
-			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
-			<li><a href="Themes.html">Theme Making</a></li>
-			<li><a href="Documentation.html">Documentation</a></li>
-			<li><a href="Tools.html">Modding Tools</a></li>
 			<li class="dropdown">
-				<a href="javascript:void(0)" class="dropbtn">WIP</a>
+				<a href="javascript:void(0)" class="dropbtn">SDKs</a>
 				<div class="dropdown-content">
 				  <a href="SDKs-DevPlat.html">Developer Platform Tools</a>
 				  <a href="SDKs-Series.html">S60, S80, S90 SDKs</a>
@@ -50,7 +42,13 @@
 				  <a href="SDKs-Langs.html">QT, Python, Ruby, SilverLight SDKs</a>
 				  <a href="SDKs-Various.html">Various SDKs</a>
 				</div>
-            </li>
+            </li>			<li><a href="SDKs-Plugins.html">SDKs Plugins</a></li>
+			<li><a href="PDK&PDT.html">PDK &amp; PDT</a></li>
+			<li><a href="SDKs-Docs.html">SDK &amp; PDK Libraries</a></li>
+			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
+			<li><a href="Themes.html">Theme Making</a></li>
+			<li><a href="Documentation.html">Documentation</a></li>
+			<li><a href="Tools.html">Modding Tools</a></li>
 		  </ul>
         </header>
     </div>
