--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
 			<li><a href="Themes.html">Theme Making</a></li>
 			<li><a href="Documentation.html">Documentation</a></li>
 			<li><a href="Tools.html">Modding Tools</a></li>
+			<li><a href="Links.html">Useful Links</a></li>	
 		  </ul>
         </header>
     </div>
