--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 			<li><a href="Dep&IDE.html">Dependencies &amp; IDE</a></li>
 			<li><a href="Themes.html">Theme Making</a></li>
 			<li><a href="Documentation.html">Documentation</a></li>
-			<li><a href="Tools.html">Modding Tools</a></li>
+			<li><a href="Tools.html">Tools</a></li>
 			<li><a href="Links.html">Useful Links</a></li>	
 		  </ul>
         </header>
