--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
 		</header>
 		<header>
 		  <ul>
+			<a href="javascript:void(0)"  class="show-menu">Show Menu</a>
 			<li><a href="index.html">Home</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">SDKs</a>
