try adding a menu button for small devices

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,9 @@
 		</header>
 		<header>
 		  <ul>
-			<a href="javascript:void(0)"  class="show-menu">Show Menu</a>
+			<!--<a href="javascript:void(0)"  class="show-menu">Show Menu</a>-->
+			<label for="show-menu" class="show-menu">Show Menu</label>
+			<input type="checkbox" id="show-menu" role="button" />
 			<li><a href="index.html">Home</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)" class="dropbtn">SDKs</a>
